# Abstract-Tracking

./: .gitignore  README.rst  TODO  TODO.md  TODO.rst  abstracts.sql  main.py  pyproject.toml  requirements.txt  setup.py
app/: logger.py  main.py
app/interface/: SQL_explorer.py  __init__.py  add_conf.py  base_window.py  db_explorer.py  landing.py  main_application.py  sql_explorer.py  window_classes.py
app/interface/csv_entry/: __init__.py  conferences.py  conferences_frame.py  conferences_frame.pyi  csv_entry.py  editable_table_frame.py  people_frame.py  people_frames.py  submissions_frames.py
app/ui/: add_conf.py
gui/: window.py
ui/: SQL_explorer.py  add_conf.py  main.py  window.py
utils/: __init__.py  create.py  data_entry.py  db_operations.py  dbconnections.py  df_operations.py  helpers.py  operations.py
